syntax = "proto3";

package foldermodule;
import "google/protobuf/empty.proto";

option java_package = "com.project.foldermodule.grpc";
option java_outer_classname = "FolderServiceProto";

// Message cho yêu cầu tạo thư mục
message FolderCreationRequest {
  string folderName = 1;
}

// Message cho yêu cầu cập nhật thư mục
message FolderUpdateRequest {
  string folderId = 1;
  string folderName = 2;
}

// Message cho chi tiết thư mục
message Folder {
  string id = 1;
  string folderName = 2;
  string createDate = 3;
  string updatedAt = 4;
}

// Message cho phản hồi xóa thư mục
message DeleteFolderResponse {
  string message = 1;
}

// Message cho yêu cầu lấy thư mục theo ID
message FolderIdRequest {
  string folderId = 1;
}

// Message cho danh sách thư mục
message GetFoldersResponse {
  repeated Folder folders = 1;
}

// Định nghĩa các dịch vụ gRPC cho Folder
service FolderService {
  // Tạo thư mục
  rpc CreateFolder (FolderCreationRequest) returns (Folder);

  // Lấy tất cả các thư mục
  rpc GetFolders (google.protobuf.Empty) returns (GetFoldersResponse);

  // Lấy thông tin một thư mục theo ID
  rpc GetFolder (FolderIdRequest) returns (Folder);

  // Cập nhật thông tin thư mục
  rpc UpdateFolder (FolderUpdateRequest) returns (Folder);

  // Xóa thư mục
  rpc DeleteFolder (FolderIdRequest) returns (DeleteFolderResponse);
}
